[gd_scene load_steps=13 format=3 uid="uid://cg737ag1ouagj"]

[ext_resource type="Texture2D" uid="uid://cx1ivjobggp8n" path="res://asset/sprites/rogues.png" id="1_fmv3f"]
[ext_resource type="Script" uid="uid://ccymptbm5oi5m" path="res://scenes/unit/unit.gd" id="1_fvc8g"]
[ext_resource type="Resource" uid="uid://dk4rxstn86o22" path="res://data/units/bjorn.tres" id="2_vh40f"]
[ext_resource type="Material" uid="uid://bb8m5fhpi4wqn" path="res://asset/shaders/2d_outline_shader.tres" id="3_3po7s"]
[ext_resource type="Script" uid="uid://c7nupwce5jh1q" path="res://components/outline_highlighter.gd" id="4_0wuuu"]
[ext_resource type="Script" uid="uid://b73kso3vipjjx" path="res://components/drag_and_drop.gd" id="4_bhlit"]
[ext_resource type="Script" uid="uid://brk3dd83fa5el" path="res://components/velocity_based_rotation.gd" id="5_vgvef"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmv3f"]
size = Vector2(36, 36)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fmv3f"]
bg_color = Color(0.13319641, 0.13319641, 0.13319635, 1)
border_color = Color(0.13319641, 0.13319641, 0.13319635, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fvc8g"]
bg_color = Color(0, 0.50980395, 0.09019608, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.13319641, 0.13319641, 0.13319635, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vh40f"]
bg_color = Color(0.13319641, 0.13319641, 0.13319635, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bhlit"]
bg_color = Color(0, 0.12941177, 0.827451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.13319641, 0.13319641, 0.13319635, 1)

[node name="Unit" type="Area2D" groups=["units"]]
script = ExtResource("1_fvc8g")
stats = ExtResource("2_vh40f")
metadata/_edit_group_ = true

[node name="Visuals" type="CanvasGroup" parent="."]
material = ExtResource("3_3po7s")

[node name="Skin" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_fmv3f")
offset = Vector2(16, 8)
region_enabled = true
region_rect = Rect2(32, 96, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(16, 8)
shape = SubResource("RectangleShape2D_fmv3f")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 1.0
offset_top = -20.0
offset_right = 31.0
offset_bottom = -14.0
theme_override_styles/background = SubResource("StyleBoxFlat_fmv3f")
theme_override_styles/fill = SubResource("StyleBoxFlat_fvc8g")
value = 42.0
show_percentage = false

[node name="ManaBar" type="ProgressBar" parent="."]
offset_left = 1.0
offset_top = -15.0
offset_right = 31.0
offset_bottom = -11.0
theme_override_styles/background = SubResource("StyleBoxFlat_vh40f")
theme_override_styles/fill = SubResource("StyleBoxFlat_bhlit")
value = 13.0
show_percentage = false

[node name="DragAndDrop" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_bhlit")
target = NodePath("..")

[node name="VelocityBasedRotation" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("5_vgvef")
target = NodePath("../Visuals/Skin")
lerp_seconds = 0.25
rotation_multiplier = 80
x_velocity_threshold = 10.0

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("4_0wuuu")
visuals = NodePath("../Visuals")
outline_color = Color(1, 1, 1, 1)
outline_thickness = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
